# gtranslator-plugins

./: AUTHORS  ChangeLog  Makefile.am  README  aclocal.m4  config.status  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
plugins/: Makefile.am
plugins/punctuation/: Makefile.am  punctuation-plugin.c  punctuation-plugin.h  punctuation.gtranslator-plugin.desktop.in
plugins/punctuation/.deps/: punctuation-plugin.Plo
plugins/spell/: Makefile.am  Makefile.in  gtranslator-automatic-spell-checker.c  gtranslator-automatic-spell-checker.h  gtranslator-spell-checker-dialog.c  gtranslator-spell-checker-dialog.h  gtranslator-spell-checker.c  gtranslator-spell-checker.h  gtranslator-spell-plugin.c  gtranslator-spell-plugin.h  spell-checker.glade  spell-checker.glade2  spell-checker.ui  spell.gtranslator-plugin.desktop.in
